# acoustiqt

./: .clangd.example  .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/inc/: fft_processor.hh  mainwindow.hh  spectrogram_visualizer.hh  spectrum_visualizer.hh  udp_receiver.hh
application/src/: fft_processor.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  spectrogram_visualizer.cpp  spectrum_visualizer.cpp  udp_receiver.cpp
docs/: Doxyfile
firmware/: .clangd.example  .gitignore  CMakeLists.txt  platformio.ini
firmware/include/: microphone.hh  secrets.hh.example  wifi.hh
firmware/src/: main.cpp  microphone.cpp  wifi.cpp
shared/: audio_config.hh  protocol.cpp  protocol.hh
